--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.6",
+    "@mantine/colors-generator": "^7.1.5",
     "@mantine/core": "^7.1.3",
     "@mantine/hooks": "^7.1.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
+    "chroma-js": "^2.4.2",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
