--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.8.6",
     "@mantine/colors-generator": "^7.1.5",
     "@mantine/core": "^7.1.3",
+    "@mantine/form": "^7.1.5",
     "@mantine/hooks": "^7.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
