--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mantine/core": "^7.1.3",
     "@mantine/form": "^7.1.5",
     "@mantine/hooks": "^7.1.3",
+    "@mantine/notifications": "^7.1.7",
     "@tabler/icons-react": "^2.39.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
