--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mantine/core": "^7.1.3",
     "@mantine/form": "^7.1.5",
     "@mantine/hooks": "^7.1.3",
+    "@mantine/notifications": "^7.1.7",
     "@tabler/icons-react": "^2.39.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +23,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "spacetime": "^7.4.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
