--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hypedb-frontend",
   "version": "0.4.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -13,27 +14,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.59",
-    "@types/react": "^18.2.29",
-    "@types/react-dom": "^18.2.14",
     "chroma-js": "^2.4.2",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "spacetime": "^7.4.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "NODE_ENV=local react-scripts start",
-    "start": "NODE_ENV=production react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "NODE_ENV=local vite",
+    "start": "NODE_ENV=production vite",
+    "build": "vite build",
+    "test": "jest",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -54,9 +50,15 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
     "@types/react-datepicker": "^4.19.1",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
-    "postcss-simple-vars": "^7.0.1"
+    "postcss-simple-vars": "^7.0.1",
+    "vite": "^5.3.2"
   }
 }
