--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "@mantine/hooks": "^7.1.3",
     "@mantine/notifications": "^7.1.7",
     "@tabler/icons-react": "^2.39.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "chroma-js": "^2.4.2",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
@@ -50,15 +47,18 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "jest": "^29.7.0",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
     "postcss-simple-vars": "^7.0.1",
+    "ts-jest": "^29.1.5",
     "vite": "^5.3.2"
   }
 }
