--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.6",
-    "@mantine/colors-generator": "^7.1.5",
-    "@mantine/core": "^7.1.3",
-    "@mantine/form": "^7.1.5",
-    "@mantine/hooks": "^7.1.3",
-    "@mantine/notifications": "^7.1.7",
+    "@mantine/colors-generator": "^7.11.0",
+    "@mantine/core": "^7.11.0",
+    "@mantine/form": "^7.11.0",
+    "@mantine/hooks": "^7.11.0",
+    "@mantine/notifications": "^7.11.0",
     "@tabler/icons-react": "^2.39.0",
     "chroma-js": "^2.4.2",
     "graphql": "^16.8.1",
@@ -18,8 +18,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
     "spacetime": "^7.4.8",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "dev": "NODE_ENV=local vite",
@@ -55,8 +54,8 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "jest": "^29.7.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.0",
+    "postcss": "^8.4.39",
+    "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "ts-jest": "^29.1.5",
     "vite": "^5.3.2"
