--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
-    "spacetime": "^7.4.8",
-    "typescript": "^4.9.5"
+    "spacetime": "^7.4.8"
   },
   "scripts": {
     "dev": "NODE_ENV=local vite",
@@ -58,6 +57,7 @@
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "ts-jest": "^29.1.5",
+    "typescript": "^5.5.2",
     "vite": "^5.3.2"
   }
 }
