--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "NODE_ENV=production vite",
     "build": "vite build",
     "test": "jest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +53,13 @@
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "postcss": "^8.4.39",
     "postcss-preset-mantine": "^1.15.0",
